--- a/src/features/todolists/ui/Todolists/TodolistItem/Tasks/TasksPagination/TasksPagination.module.css
+++ b/src/features/todolists/ui/Todolists/TodolistItem/Tasks/TasksPagination/TasksPagination.module.css
@@ -1,11 +1,15 @@
 .pagination {
-  margin-bottom: 10px;
+  margin: 16px 0;
   display: flex;
   justify-content: center;
 }
 
 .totalCount {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   margin-right: 16px;
+  margin-top: 8px;
+  padding: 8px;
+  background: rgba(0, 0, 0, 0.02);
+  border-radius: 8px;
 }
